<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_teampage"
        android:title="@string/action_teampage"
        app:showAsAction="never"/>
    <item android:id="@+id/action_pastmatches"
        android:title="@string/action_pastmatches"
        app:showAsAction="never"/>
    <item android:id="@+id/action_newmatch"
        android:title="@string/action_newmatch"
        app:showAsAction="never"/>
    <item android:id="@+id/action_conferenceresults"
        android:title="@string/action_conferenceresults"
        app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>